# py_uifish

./: README.md  requirements.txt  setup.cfg  setup.py
config/: config.yml
suits/: uifish_eg.yml
uifish/: __init__.py  __main__.py  settings.py
uifish/core/: executor.py  runner.py
uifish/tools/: adb_shell.py  init.py  log.py  parse_json.py  template.py  timer.py
uifish/tools/suit_lib/: load_suit.py
uifish/tools/template/: __init__.py  config.yml  uifish_eg.yml
