[metadata]
keywords = uifish, android uiautomator
name = uifish
version = 0.1.3
author = mengjianhua
author-email = 1711621009@qq.com
summary = Python Wrapper for Google Android uifish test case tool
license = MIT
home-page = https://github.com/Mengjianhua-c/py_uifish
# all classifier can be found in https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[files]
packages=uifish

[entry_points]
# https://docs.openstack.org/pbr/3.1.1/#entry-points
console_scripts =
   uifish = uifish.__main__:main